--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ boto3==1.34.11
 botocore==1.34.87
 faiss-cpu==1.7.4
 langchain==0.1.16
-langchain-community==0.0.34
+langchain-community==~>2.5
 langchain-core==0.1.45
 langchain-openai==0.1.3
 langchain-text-splitters==0.0.1
